# ufrrj-prog-linear-trab

./: .gitignore  README.md  trabalho.ipynb
code/: Dockerfile  pyproject.toml  trabalho.ipynb
code/src/: Relatorio.ipynb  app.py  bib.tex  data_utils.py  dataset.py  lpProblem.lp  main.py  model.py  test.py  trabalho.ipynb  utils.py
code/src/api/controller/: predict.py  train.py
code/src/api/request/: predict_request.py
code/src/api/service/: predict_service.py  train_service.py
code/src/exception/: DataEmptyException.py
code/src/train/: lpda.py
code/stub/: RNAseq.RData  palmdates.RData
