[tool.poetry]
name = "code"
version = "0.1.0"
description = "Final LP course assignment"
authors = [
    "Raphael Balmant <raphael.balmant@gmail.com>",
    "Elis Braga <elisbragaa@ufrrj.br>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9, <=3.12"
highspy = "^1.5.3"
numpy = "^1.26.1"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
pulp = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
